    + [RA] New file listing multiarch binary directories.
  * data/shared-libs/ldconfig-dirs:
    + [RA] New file listing directories searched by ld.so.

  * frontend/lintian:
    + [RA] Qualify relative --root directories so that we don't break
      later.  Patch from Håkon Stordahl.  (Closes: #469925)

  * lib/Spelling.pm:
    + [RA] Avoid Perl warnings when called with an uninitialized value.

  * man/lintian.1:
    + [FL] Drop linda from SEE ALSO since it is obsolete now. Suggested
      by Hideki Yamane. (Closes: #474478)
  
  * testset/copyright:
    + [FL] New testcases by Tobias Toedter.  (Closes: #472665)
  * testset/description:
    + [FL] New testcases by Tobias Toedter.  (Closes: #471838)

  * unpack/list-srcpkg:
    + [RA] Fix syntax error introduced by Uploaders support.
  * unpack/unpack-binpkg-l1:
    + [RA] Extract a tar listing with numeric owners and groups into
      index-owner-id in the lab.

 -- Frank Lichtenheld <djpig@debian.org>  Thu, 17 Apr 2008 21:52:27 +0200

lintian (1.23.46) unstable; urgency=low

  The "five Lintian committers!" release.

  * checks/binaries:
    + [RA] Anchor file matches for Perl libraries and debugging symbols so
      as to not match partial paths.  Based on a patch from Niko Tyni.
      (Closes: #466501)
    + [RA] Also check for make -i when checking if errors from make clean or
      distclean are ignored.  Thanks, Jörg Sommer.  (Closes: #469024)
  * checks/changelog-file:
    + [RA] Adjust for the extra space added by Parse::DebianChangelog when
      checking line length.  Thanks, Robert Millan.  (Closes: #467019)
  * checks/common_data.pm:
    + [RA] Accept (and ignore for now) the new Checksums-Sha1,
      Checksums-Sha256, and Checksums-Md5 fields in source packages.
      Thanks, Raphael Hertzog.  (Closes: #466979)
  * checks/control-file:
    + [RA] Skip empty dependencies for stronger-dependency-implies-weaker.
  * checks/control-files{.desc,}: